# npcx-ec

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/: CMakeLists.txt  main.c
boards/: npck3m7k_poc.conf  npcx4m8f_evb.overlay  npcx9m6f_poc.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/lnv_system/: CMakeLists.txt  Kconfig  lnv_system_npcx.c
dts/bindings/gpio/: poc-gpios.yaml
dts/bindings/hibernate/: npcx-hibernate-psl.yaml
include/drivers/: lnv_system.h
linker/: sections.ld
shim/drivers/: CMakeLists.txt  espi.c
